samples/_failures_safe/1761272727_3547a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a811c6c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1a811c6c.c:156:17: error: expected ‘;’ at end of input
  156 |             line
      |                 ^
      |                 ;
./samples/SAFE/__tmp_1a811c6c.c:156:13: error: expected declaration or statement at end of input
  156 |             line
      |             ^~~~
./samples/SAFE/__tmp_1a811c6c.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a811c6c.c:156:13: error: expected declaration or statement at end of input
